refactor: Swagger UI를 위한 기본 설정 정리